# NL2SQL-with-Deep-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  fixing_things.py  pyproject.toml
app/: fixing_things.py  main.py
app/agents/: chains.py  context.py  deep_agent.py  middleware.py  prompts.py  tools.py
app/api/: routes.py
app/core/: config.py  llm.py
app/db/: database.py  models.py
app/schemas/: api.py
app/services/: chat_history.py  connections.py  schema.py
assets/: arch.md
