[project]
name = "nl2sql-deep-agent"
version = "0.2.0"
description = "Modular NL2SQL backend using FastAPI, Deep Agents, and PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Raftaar Rashedin", email = "raftaarrashedin00@gmail.com" },
]
dependencies = [
    "deepagents>=0.5.0",
    "fastapi>=0.111.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=1.0.0",
    "langgraph>=0.4.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
